# geo-relations

./: .gitignore  404.html  NOTICE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.ipynb_checkpoints/: 404-checkpoint.html
docs/: index.md  reference.md
docs/source/: api.rst  conf.py  index.rst  usage.rst
hooks/: pre-commit
notebooks/: 20-collect-shapes.ipynb  dev.ipynb  generate-relation-examples.ipynb  minimal-example.ipynb  test-collector-and-generator.ipynb  test-harverter-and-generator.ipynb
notebooks/.ipynb_checkpoints/: 10-eda-checkpoint.ipynb  20-collect-shapes-checkpoint.ipynb
src/: generators.py  harvesters.py
src/geo_relations/: __init__.py  collectors.py  generators.py  harvesters.py  utilities.py
